samples/_failures_safe/1761354399_4ad6d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_138fd8a3.c: In function ‘main’:
./samples/SAFE/__tmp_138fd8a3.c:188:10: error: expected expression at end of input
  188 |     enum Algorithm algo1 =
      |          ^~~~~~~~~
./samples/SAFE/__tmp_138fd8a3.c:188:10: error: expected declaration or statement at end of input
